# ievr_dataminer

./: .gitignore  Cargo.toml  README.md  settings.toml
.github/workflows/: rust.yml
src/: characters.rs  common.rs  file_operations.rs  main.rs  settings.rs  text.rs  tools.rs
src/characters/: character.rs
src/text/: text_database.rs
tests/: name_consistency.py  roma_duplicates.py
