[package]
name = "ievr_dataminer"
version = "1.0.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
memmap2 = "0.9"
regex = "1.12.2"
rusqlite = {version = "0.38.0", features = ["bundled"]}
ievr_cfg_bin_editor_core = { git = "https://github.com/Telmo26/ievr_cfg_bin_editor.git", branch = "main" }